syntax = "proto3";

package ocf.cloud.auth.pb;

import "github.com/plgd-dev/cloud/authorization/pb/auth.proto";

option go_package = "github.com/plgd-dev/cloud/authorization/pb;pb";

service AuthorizationService {
	rpc GetOwnerDevices (GetOwnerDevicesRequest) returns (stream OwnerDevice) {}

	rpc AddDevice(AddDeviceRequest) returns (AddDeviceResponse) {}
	rpc DeleteDevices(DeleteDevicesRequest) returns (DeleteDevicesResponse) {}
}